Fix hijri date strip init and align control fonts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -858,7 +858,7 @@ textarea {
 }
 
 .quran-controls__search .input {
-  font-size: inherit;
+  font-size: calc(1em - 5px);
 }
 
 @media (max-width: 960px) {
